0.8.0
	* Show query time in status bar in query mode
	* Use abbreviated namespaces in the query results

0.7.0
	* First official release