@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <gui name="nepomukshell"
-     version="2"
+     version="3"
      xmlns="http://www.kde.org/standards/kxmlgui/1.0"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://www.kde.org/standards/kxmlgui/1.0
@@ -22,6 +22,7 @@
     <Menu name="resource" >
      <text>Resource</text>
      <Action name="resource_delete" />
+     <Action name="resource_show_source" />
     </Menu>
   </MenuBar>
 
